Add cocktails section with card's

--- a/src/index.css
+++ b/src/index.css
@@ -89,14 +89,14 @@ body {
     }
 
     .noisy {
-        @apply absolute inset-0 size-full bg-[url("/images/noise.png")];
+        @apply absolute inset-0 w-[100%] bg-[url("/images/noise.png")];
     }
 
     #hero {
         @apply relative z-10 min-h-dvh w-full border border-transparent;
 
         h1 {
-            @apply md:mt-32 mt-40 text-8xl md:text-[18vw] leading-none text-center font-modern-negra;
+            @apply md:mt-32 mt-40 text-7xl md:text-[18vw] leading-none text-center font-modern-negra;
         }
 
         .left-leaf {
